--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.3",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
@@ -36,6 +37,8 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-sprites": "^4.2.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react-test-renderer": "^16.11.0",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
@@ -43,6 +46,7 @@
     "ts-loader": "^6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.6.4",
     "webpack": "^4.40.2",
@@ -50,5 +54,10 @@
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "^2.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
