--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "NODE_ENV=production rm -rf 'dist' && webpack",
     "build-dev": "NODE_ENV=development rm -rf 'dist' && webpack --watch",
     "start": "",
-    "start-dev": "NODE_ENV=development webpack-dev-server --open",
-    "lint": "tslint --fix --project ./tsconfig.json"
+    "start-dev": "NODE_ENV=development nodemon packages/server/dist/index.js -e js,json,ts,tsx",
+    "lint": "pretty-quick --staged"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
@@ -22,17 +25,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.3",
     "@types/jest": "^24.0.22",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-redux": "^7.1.5",
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "husky": "^4.2.3",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.2",
     "postcss-assets": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -53,7 +61,9 @@
     "webpack-clean-obsolete-chunks": "^0.4.0",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.9.0",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "husky": {
     "hooks": {
