--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
+  "printWidth": 80,
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2
