--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.6.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
+    "@types/http-errors": "^1.6.3",
     "@types/jest": "^24.0.22",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
