--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "jsx": "react",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
       "@app/*": ["packages/app/src/*"],
       "@server/*": ["packages/server/src/*"]
     }
   },
-  "include": ["./packages/server/src/**/*"],
+  "include": ["./packages/app/src/**/*", "./packages/server/src/**/*"],
   "exclude": [".history", "dist", "node_modules"]
 }
