Setup react server side rendering

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
       "@server/*": ["server/src/*"]
     }
   },
+  "typeRoots": ["./app", "./server/src"],
   "include": ["./app/**/*", "./server/src/**/*"]
 }
