--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-polyfill": "^6.26.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "express-manifest": "^0.1.1",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -40,6 +39,7 @@
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
+    "express-manifest-helpers": "^0.6.0",
     "husky": "^4.2.3",
     "ignore-loader": "^0.1.2",
     "jest": "^24.9.0",
@@ -61,6 +61,7 @@
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-loader": "^3.5.4",
+    "tslint-react": "^4.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.40.2",
     "webpack-clean-obsolete-chunks": "^0.4.0",
