--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "typescript-react-starter",
+  "name": "@appname/root",
   "version": "1.0.0",
   "author": "Santiago Ramirez <hey@santi.nyc>",
   "scripts": {
     "test": "jest",
+    "bootstrap": "lerna bootstrap --hoist",
     "build": "NODE_ENV=production webpack",
     "build:dev": "NODE_ENV=development webpack",
-    "build-web": "NODE_ENV=production webpack --config webpack.config.web.js",
-    "build-web:dev": "NODE_ENV=development webpack --config webpack.config.web.js",
-    "start": "",
-    "start:dev": "NODE_ENV=development nodemon server/build/server.js -e js,json,ts,tsx",
     "lint": "pretty-quick --staged"
   },
   "dependencies": {
+    "@appname/root": "./",
     "babel-polyfill": "^6.26.0",
-    "cookie-parser": "^1.4.4",
-    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -27,9 +23,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.3",
-    "@types/http-errors": "^1.6.3",
     "@types/jest": "^24.0.22",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
@@ -39,13 +32,11 @@
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
-    "express-manifest-helpers": "^0.6.0",
     "husky": "^4.2.3",
-    "ignore-loader": "^0.1.2",
     "jest": "^24.9.0",
+    "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^2.0.2",
     "postcss-assets": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -68,8 +59,7 @@
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-merge": "^4.2.2"
   },
   "husky": {
     "hooks": {
