--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
@@ -30,6 +31,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.15",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
