--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "@appname/root",
-  "version": "1.0.0",
+  "name": "@monorepo/core",
+  "version": "0.0.0",
   "author": "Santiago Ramirez <hey@santi.nyc>",
   "scripts": {
-    "test": "jest",
-    "bootstrap": "lerna bootstrap --hoist",
-    "server:build": "cd packages/server && npm run build",
-    "server:build:dev": "cd packages/server && npm run build:dev",
-    "server:start": "cd packages/server && npm run start",
-    "server:start:dev": "cd packages/server && npm run start:dev",
-    "lint": "pretty-quick --staged"
+    "test": "npx jest",
+    "build": "npx webpack",
+    "lint": "npx pretty-quick --staged"
   },
   "dependencies": {
-    "@appname/root": "./",
+    "@monorepo/core": "./",
+    "@monorepo/app": "./packages/app",
+    "@monorepo/server": "./packages/server",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
@@ -38,7 +36,6 @@
     "dotenv-webpack": "^1.7.0",
     "husky": "^4.2.3",
     "jest": "^24.9.0",
-    "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-assets": "^5.0.0",
@@ -48,6 +45,7 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react-test-renderer": "^16.11.0",
+    "sass": "^1.3.0",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "ts-jest": "^24.1.0",
@@ -59,7 +57,7 @@
     "typescript": "^3.6.4",
     "webpack": "^4.40.2",
     "webpack-clean-obsolete-chunks": "^0.4.0",
-    "webpack-cli": "^3.3.8",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2"
