--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,13 @@
     "jsx": "react",
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["packages/app/src/*"],
-      "@server/*": ["packages/server/src/*"]
+      "@app/*": ["app/src/*"],
+      "@server/*": ["server/src/*"]
     }
   },
-  "typeRoots": ["./packages/app/src", "./packages/server/src"],
+  "typeRoots": ["./app/src", "./server/src"],
   "include": [
-    "./packages/app/**/*",
-    "./packages/server/src/**/*",
-    "packages/server/app.web.tsx"
+    "./app/**/*",
+    "./server/src/**/*"
   ]
 }
