--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "@monorepo/server",
+  "name": "monorepo-server",
   "version": "0.0.1",
   "author": "Santiago Ramirez <hey@santi.nyc>",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "build:dev": "NODE_ENV=development webpack",
-    "start": "NODE_ENV=production node build/server.js",
-    "start:dev": "NODE_ENV=development nodemon build/server.js -e js,json,ts,tsx"
+    "build": "npx webpack",
+    "prebuild:dev": "rm -rf build && rm -rf public/build",
+    "build:dev": "npx webpack",
+    "start": "npx node build/server.js",
+    "start:dev": "npx nodemon build/server.js -e js,json,ts,tsx"
   },
   "dependencies": {
+    "@loadable/server": "^5.12.0",
+    "@types/loadable__server": "^5.12.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1"
   },
@@ -16,7 +19,6 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/http-errors": "^1.6.3",
-    "express-manifest-helpers": "^0.6.0",
     "ignore-loader": "^0.1.2",
     "nodemon": "^2.0.2",
     "webpack-node-externals": "^1.7.2"
