--- a/app/desktop/package.json
+++ b/app/desktop/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "app",
+  "name": "app-desktop",
   "version": "0.0.1",
   "authors": [
     "Santiago Ramirez <hey@santi.nyc>"
-  ],
-  "scripts": {
-    "test": "jest"
-  }
+  ]
 }
