--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,19 @@
     "jsx": "react",
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["app/src/*"],
+      "@app/desktop/*": ["app/desktop/src/*"],
+      "@app/mobile/*": ["app/mobile/src/*"],
+      "@app/shared/*": ["app/shared/src/*"],
+      "@app/web/*": ["app/web/src/*"],
       "@server/*": ["server/src/*"]
     }
   },
-  "typeRoots": ["./app/src", "./server/src"],
-  "include": [
-    "./app/**/*",
-    "./server/src/**/*"
-  ]
+  "typeRoots": [
+    "./app/desktop/src",
+    "./app/mobile/src",
+    "./app/shared/src",
+    "./app/web/src",
+    "./server/src"
+  ],
+  "include": ["./app/**/src/**/*", "./server/src/**/*"]
 }
