--- a/app-desktop/package.json
+++ b/app-desktop/package.json
@@ -6,10 +6,12 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "webpack"
   },
   "devDependencies": {
     "electron": "^8.2.3",
-    "electron-packager": "^14.2.1"
+    "electron-packager": "^14.2.1",
+    "html-webpack-plugin": "^4.2.0"
   }
 }
