--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,10 @@
 .history
 Close
 
-# NPM
+# Node
 node_modules
+npm-debug.log
+yarn-error.log
 
 # Environment
 .env
@@ -19,3 +21,43 @@ app-desktop/build
 app-mobile/build
 server/server.bundle.js
 server/public/build
+
+# Xcode
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+
+# Android/IntelliJ
+.idea
+.gradle
+local.properties
+*.iml
+
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+!debug.keystore
+
+# Fastlane
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
+
+# CocoaPods
+/ios/Pods/
