--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "@types/lodash": "^4.14.150",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
